Fix/workaround T37073: Crash updating custom props visible in the UI